adding CNAME and cleanup

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 		<meta name="author" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="apple-itunes-app" content="app-id=994182280">
-		<meta property="og:url" content="https://yourwebsite.com">
+		<meta property="og:url" content="https://seekbangle.com">
 		<meta property="og:title" content="App Name">
 		<meta property="og:description" content="Awesome Unicorns">
-		<meta property="og:image" content="https://yourwebsite.com/promo-image.jpg">
+		<meta property="og:image" content="https://seekbangle.com/promo-image.jpg">
 		<meta name="twitter:card" content="app">
 		<meta name="twitter:site" content="@twitterusername">
 		<meta name="twitter:description" content="Awesome Unicorns">
 		<meta name="twitter:app:name:iphone" content="App Name">
 		<meta name="twitter:app:id:iphone" content="994182280">
-		<title>App Name - Awesome Unicorns</title>
+		<title>Bangle - Astrology Based Analysis</title>
 		<link href="index.css" rel="stylesheet">
 	</head>
 	<body>
@@ -23,12 +23,12 @@
 			<div class="responsive intro-container">
 				<div class="app-icon">
 					<img alt="App icon" src="app-icon.png">
-					<p>App</p>
+					<p>Bangle</p>
 				</div>
 				<div class="intro">
-					<h2>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</h2>
+					<h2>Match Smarter Faster - Astrology Base Matches.</h2>
 				</div>
-				<a class="primary-btn app-store-btn" href="https://apps.apple.com/us/app/blear-create-blurry-wallpapers/id994182280">Get it on the App Store</a>
+				<a class="primary-btn app-store-btn" href="https://apps.apple.com/">Get it on the App Store</a>
 			</div>
 			<div class="responsive iphone">
 				<div class="iphone-screenshot">
@@ -39,10 +39,10 @@
 		</header>
 		<footer class="container footer">
 			<div class="sep"></div>
-			<p class="responsive credit">Made with ♥ by <a href="https://twitter.com/twitterusername">Your Name</a></p>
+			<p class="responsive credit">Made with ♥ by <a href="https://twitter.com/twitterusername">Banlge</a></p>
 			<div class="responsive contact">
-				<a href="mailto:youremail@gmail.com?subject=App Name">Support</a>
-				<a href="">Press Kit</a>
+				<a href="mailto:seekbangle@gmail.com?subject=App Name">Support</a>
+			<!--	<a href="">Press Kit</a> -->
 			</div>
 		</footer>
 		<script>
