--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 		<link href="index.css" rel="stylesheet">
 	</head>
 	<body>
-		<header class="container">
+		<header class="container center">
 			<div class="responsive intro-container">
 				<div class="app-icon">
 					<img alt="App icon" src="app-icon.png">
-					<p>Bangle</p>
+					<p>BANGLE</p>
 				</div>
 				<div class="intro">
-					<h2>Match Smarter Faster - Astrology Base Matches.</h2>
+					<h2>Match Clever -</br> Astrology Base Matches.</h2>
 				</div>
 				<a class="primary-btn app-store-btn" href="https://apps.apple.com/">Get it on the App Store</a>
 			</div>
