added android btn

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 				</div>
 				<div class="intro">
 					<h2>Match Clever -</br> Astrology Base Matches.</h2>
+					<a class="primary-btn app-store-btn" href="https://apps.apple.com/">Get it on the App Store</a>
 				</div>
-				<a class="primary-btn app-store-btn" href="https://apps.apple.com/">Get it on the App Store</a>
+				<a class="primary-btn androidapp-store-btn" href="https://android.com/">Get it on the Android Store</a>
 			</div>
 			<div class="responsive iphone">
 				<div class="iphone-screenshot">
