++privacy&terms&conditions

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta property="og:title" content="App Name">
 		<meta property="og:description" content="Awesome Unicorns">
 		<meta property="og:image" content="https://seekbangle.com/promo-image.jpg">
+
 		<meta name="twitter:card" content="app">
 		<meta name="twitter:site" content="@twitterusername">
 		<meta name="twitter:description" content="Awesome Unicorns">
@@ -26,9 +27,9 @@
 					<p>BANGLE</p>
 				</div>
 				<div class="intro">
-					<h2>Match Clever -</br> Astrology Base Matches.</h2>
+					<h2>Match Clever -</br> Astrology Base Matches.</h2></br>
 					<a class="primary-btn app-store-btn" href="https://apps.apple.com/">Get it on the App Store</a>
-				</div>
+				</div></br>
 				<a class="primary-btn androidapp-store-btn" href="https://android.com/">Get it on the Android Store</a>
 			</div>
 			<div class="responsive iphone">
@@ -42,6 +43,8 @@
 			<div class="sep"></div>
 			<p class="responsive credit">Made with ♥ by <a href="https://twitter.com/twitterusername">Banlge</a></p>
 			<div class="responsive contact">
+				<a href="https://seekbangle.com/terms-conditions.html">Terms & Conditions</a>
+				<a href="https://seekbangle.com/privacy-policy.html">Privacy</a>
 				<a href="mailto:seekbangle@gmail.com?subject=App Name">Support</a>
 			<!--	<a href="">Press Kit</a> -->
 			</div>
