++privacy&terms&conditions

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		</header>
 		<footer class="container footer">
 			<div class="sep"></div>
-			<p class="responsive credit">Made with ♥ by <a href="https://twitter.com/twitterusername">Banlge</a></p>
+			<p class="responsive credit">Made with ♥ by <a href="https://seekbangle.com">Banlge</a></p>
 			<div class="responsive contact">
 				<a href="https://seekbangle.com/terms-conditions.html">Terms & Conditions</a>
 				<a href="https://seekbangle.com/privacy-policy.html">Privacy</a>
