++appscreenshot and footer name typo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<meta name="twitter:description" content="Awesome Unicorns">
 		<meta name="twitter:app:name:iphone" content="App Name">
 		<meta name="twitter:app:id:iphone" content="994182280">
-		<title>Bangle - Astrology Based Analysis </title>
+		<title>Bangle - Astrology Base Analysis </title>
 		<link href="index.css" rel="stylesheet">
 	</head>
 	<body>
@@ -41,7 +41,7 @@
 		</header>
 		<footer class="container footer">
 			<div class="sep"></div>
-			<p class="responsive credit">Made with ♥ by <a href="https://seekbangle.com">Banlge</a></p>
+			<p class="responsive credit">Made with ♥ by <a href="https://seekbangle.com">Bangle</a></p>
 			<div class="responsive contact">
 				<a href="https://seekbangle.com/terms-conditions.html">Terms & Conditions</a>
 				<a href="https://seekbangle.com/privacy-policy.html">Privacy</a>
