--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
 				</div>
 				<div class="intro">
 					<h2>Match Clever -</br> Astrology Base Matches.</h2></br>
-					<a class="primary-btn app-store-btn" href="https://apps.apple.com/">Get it on the App Store</a>
+					<a class="primary-btn androidapp-store-btn" href="https://play.google.com/store/apps/details?id=com.bangle.bangleapp&hl=en&gl=US">Get it on the Android Store</a>
 				</div></br>
-				<a class="primary-btn androidapp-store-btn" href="https://android.com/">Get it on the Android Store</a>
+					<a class="primary-btn app-store-btn" href="https://apps.apple.com/">Get it on the App Store</a>
+				</br></br><p>**iOS Coming Soon</p>
 			</div>
 			<div class="responsive iphone">
 				<div class="iphone-screenshot">
