--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<meta name="description" content="Awesome Unicorns">
+		<meta name="description" content="Match Clever">
 		<meta name="author" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="apple-itunes-app" content="app-id=994182280">
 		<meta property="og:url" content="https://seekbangle.com">
-		<meta property="og:title" content="App Name">
-		<meta property="og:description" content="Awesome Unicorns">
+		<meta property="og:title" content="Bangle">
+		<meta property="og:description" content="Match Clever">
 		<meta property="og:image" content="https://seekbangle.com/promo-image.jpg">
 
 		<meta name="twitter:card" content="app">
 		<meta name="twitter:site" content="@twitterusername">
-		<meta name="twitter:description" content="Awesome Unicorns">
-		<meta name="twitter:app:name:iphone" content="App Name">
+		<meta name="twitter:description" content="Match Clever">
+		<meta name="twitter:app:name:iphone" content="Bangle">
 		<meta name="twitter:app:id:iphone" content="994182280">
 		<title>Bangle - Astrology Base Analysis </title>
 		<link href="index.css" rel="stylesheet">
